fdo#51249 Disable stream copy when saving a file with 'Changes Record' active

Change-Id: Id06caa5d0552e4f3695244de4f6096f80885a783